# hi-im-core

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  NOTICE  README.md  docker-compose.load.yml  docker-compose.mirror.cn.yml  docker-compose.yml
.github/workflows/: ci.yml
bench/: baseline-v1.json
cmd/hi-im-bench/: main.cpp
cmd/hi-im-hub/: main.cpp
deploy/docker/: Dockerfile.build  Dockerfile.hub  accept.sh  build-in-linux.sh
doc/: C++八股与hi-im-core复习计划.md  M1-实施清单.md  README.md  hi-file-transfer-M1-实施清单.md  hi-file-transfer-技术设计文档.md  hi-file-transfer-简历与投递指南.md  hi-im-core-核心代码精读.md  协议规范-bus-wire-v1.md  技术设计文档.md  简历-CHANGELOG.md  简历-双版本投递指南.md  简历-孙超-v1.0-GoCpp并行.md  简历-孙超-v1.0-IM专投.md  简历-孙超-v1.0.md
doc/doway/: im-core源码阅读对照.md  一个帧串起来hub四角色(线程模型).md  源码注释导读.md  理解核心1.md  群聊故事线串起来hi-im核心业务+hi-im-core的线程模型辅助迅速掌握hi-im.md  群聊的订阅关系梳理.md  跟一条消息读代码.md
doc/theme/: 01-epoll-Reactor模型.md  02-SPSC与MPSC队列语义.md  03-Bug2-MPSC误用SPSC.md  04-双平面FORWARD与BACKEND.md  05-async_send与publish路由.md  06-群聊端到端背诵.md  README.md
include/hiim/: license_header.hpp  status.hpp
include/hiim/hub/: bridge.hpp  context.hpp  hub_server.hpp  router.hpp
include/hiim/im/: header.hpp
include/hiim/wire/: auth.hpp  header.hpp  sys_cmd.hpp
src/hub/: bridge.cpp  context_impl.cpp  distributor.cpp  distributor.hpp  health_server.cpp  health_server.hpp  hub_server.cpp  listener.cpp  listener.hpp  pipe_wakeup.hpp  queue.hpp  queue_push.hpp  reactor.cpp  reactor.hpp  route_log.hpp  router.cpp  socket_tuning.hpp  worker.cpp  worker.hpp
src/wire/: frame_buffer.hpp
test/: bridge_downlink_test.cpp  frame_buffer_test.cpp  router_test.cpp  wire_header_test.cpp
test/integration/: hub_proxy_test.cpp  hub_remote_smoke.cpp
